# MediClaim

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRACTS.md  EVAL_REPORT.md  README.md  TEST_FIXES_SUMMARY.md  UI_ENHANCEMENTS.md  pyproject.toml  requirements.txt  test_claim_submission.py  test_ocr_f021.py  test_tc011.py
backend/: .dockerignore  Dockerfile  nixpacks.toml  railway.json  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  decision_maker.py  document_verifier.py  fraud_detector.py  ocr_extractor.py  orchestrator.py  policy_validator.py
backend/app/api/: __init__.py  routes.py  schemas.py
backend/app/exceptions/: __init__.py
backend/app/loggers/: __init__.py
backend/app/models/: __init__.py  claim.py  document.py  enums.py  policy.py  state.py
backend/app/services/: __init__.py  llm_prompts.py  llm_service.py  medical_validators.py  ocr_service.py  policy_engine.py  supabase_client.py
backend/app/utils/: __init__.py  trace_builder.py
backend/data/: supabase_schema.sql
backend/data/test_documents/: DOCUMENT_MAPPING.md  README.md  TEST_EXECUTION_GUIDE.md
backend/scripts/: create_mock_docs.py  create_test_case_docs.py  generate_eval_report.py  generate_test_documents.py  test_upload_docs.py
backend/tests/: test_all_cases.py  test_integration.py  test_models.py
backend/tests/test_agents/: test_document_verifier.py
backend/tests/test_services/: test_ocr_service.py  test_policy_engine.py
frontend/: index.html  package-lock.json  package.json  railway.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: DecisionCard.jsx  Layout.jsx  TraceViewer.jsx
frontend/src/hooks/: useSmartPolling.js
frontend/src/pages/: DecisionPage.jsx  StatusPage.jsx  UploadPage.jsx
frontend/src/utils/: formatters.js
