[project]
name = "mediclaim-ai"
version = "1.0.0"
description = "AI-powered health insurance claims adjudication system"
authors = [
    {name = "MediClaim Team", email = "team@mediclaim.ai"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Framework
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "python-multipart==0.0.12",
    
    # Agent Framework
    "langgraph==0.2.45",
    "langchain==0.3.7",
    "langchain-core>=0.3.15,<0.4.0",
    "langchain-community==0.3.5",
    
    # LLM Providers - Multiple options
    "litellm==1.52.9",
    "langchain-openai==0.2.8",
    "langchain-google-genai==2.0.4",
    "langchain-ollama==0.2.0",
    "langchain-anthropic==0.2.4",
    
    # OCR - PaddlePaddle
    "paddlepaddle==3.3.1",
    "paddleocr==2.9.1",
    "pillow==11.0.0",
    "opencv-python-headless==4.10.0.84",
    "pypdfium2==5.10.1",  # PDF -> image rendering (multi-page documents)
    
    # Database
    "supabase==2.9.0",
    "postgrest>=0.17.0,<0.18.0",
    
    # Utilities
    "python-dotenv==1.0.1",
    "httpx==0.27.2",
    "python-dateutil==2.9.0",
    "numpy==1.26.4",
    "aiofiles==24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "black==24.10.0",
    "ruff==0.7.4",
]

[tool.setuptools]
packages = ["backend"]

[tool.setuptools.package-dir]
"" = "."

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
